Issue #407: ship hkj-test module with custom AssertJ assertions
New publishable module hosting fluent AssertJ assertion helpers for
every public Higher-Kinded-J type, plus the contract-based test
infrastructure that proves they remain correct as the API evolves.

Module
------

- hkj-test (artifactId io.github.higher-kinded-j:hkj-test): 19
  user-facing assertion classes covering the discriminated unions
  (Either, Maybe, Try, Validated, Lazy), the Reader/Writer/State
  trio, the effect types (IO, VTask, VStream), every monad
  transformer (EitherT, MaybeT, OptionalT, ReaderT, StateT,
  WriterT), and the Free/EitherF algebras.
- Single common package org.higherkindedj.hkt.assertions for
  consumer convenience.
- Published as a JPMS module (org.higherkindedj.test) with
  requires transitive on org.higherkindedj.core and org.assertj.core
  so a single dependency declaration is sufficient. Java 25 with
  --enable-preview can use `import module org.higherkindedj.test;`
  to bring every helper into scope.
- Registered in settings.gradle.kts and hkj-bom constraints.

Assertion API refactor
----------------------

Every assertion class refactored from `if (cond) failWithMessage(...)`
blocks to AssertJ-fluent chains
(`assertThat(x).withFailMessage(...).isTrue()` / `isEqualTo` /
`isNull` / `isNotNull` / `isInstanceOf`). The Supplier overload of
`withFailMessage` is used for state-dependent error messages so the
message string only constructs on failure. Direct record-component
casts replace fold-with-throw and try/catch dispatch, removing dead
code branches. Outer holder classes for transformer assertions are
made final with private no-arg constructors. The fluent rewrite
matches AssertJ idioms used by extension libraries and is net-shorter
than the original code.

Contract test framework
-----------------------

AssertContract<S, A> is a small declarative base in
hkj-test/src/test/java. Subclasses enumerate Rows of
(label, passingInput, failingInput, chain). Two @TestFactor